[tool.poetry]
name = "cryptopals"
version = "0.1.0"
description = ""
authors = ["George Roman <george.roman.99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^36.0.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
